--- a/experiments.tex
+++ b/experiments.tex
@@ -123,7 +123,7 @@ $\eta_{U}=[0.6,0.6]$\\
 Controller designed in this way is able to overcome bounded additive disturbance $w=[0.03,0.03,0.03]$. Nominal controller with presence of this disturbance will be pushed outside of the tube. As it shown in the Fig.\ref{fig:MA}, trajectory 1 and 2 will have collision with this value of disturbance(using nominal controller) . Abstraction in total for 10 systems takes about 12 minutes(average 100 seconds for each system) and synthesizing controller takes about 2 minutes(near 10 seconds for each system).
 \begin{figure}[t]\label{fig:MA}
 	\centering
-	\includegraphics[width=0.85\textwidth]{MA.png}
+	\includegraphics[width=0.85\textwidth]{figures/MA.png}
 	\caption{Trajectories of multi agent unicycle when open loop controller produced by ALTRO and formally synthesized controller produced by SCOTS were used.}
 \end{figure}
 
