--- a/prelims.tex
+++ b/prelims.tex
@@ -5,22 +5,41 @@
 \smallskip
 \noindent\textbf{Notation.}\
 We use the notation $\mathbb{R}$ and $\mathbb{R}_{>0}$ to denote the set of real numbers and the set of positive real numbers respectively.
-The norm $\| \cdot \|$ denotes the infinity norm. %\textcolor{blue}{
-We use $d(x,y)$ and $D(x,A)$ to denote geometric distance between a point $x$ to point $y$ and to polytope $A$, respectively.%}
+The norm $\| \cdot \|$ denotes the infinity norm. 
+%\textcolor{blue}{
+%We use $d(x,y)$ to denote geometric distance between two points $x$ and $y$, and
+%use $D(x,Y)$ to denote the geometric distance between the point $x$ and a set $Y$, defined as: $D(x,A):=\inf_y\set{d(x,y)\mid y\in Y}$.
+%\KM{Before, the set was a polytope: does it have to be a polytope at this point? Also, by geometric distance between $x$ and $y$, do you mean the infinity norm or the euclidean norm?}
 
+Let $(S,d)$ be a metric space, where $S$ is a set and $d\colon S\times S\rightarrow \mathbb{R}$ is the metric on $S$.
+For any set $R\subseteq S$ and any element $s\in S$, we generalize the metric $d$ to measure the ``distance'' between the set $R$ and the element $s$ as follows:
+$d(s,R)\coloneqq \inf_{r\in R}\set{d(s,r)}$.
+
+Let $f\colon A\to B$ and $g\colon C\to D$ be two functions.
+We define the product function $f\oplus g\colon A\times C\to B\times D $, $f\oplus g \colon (a,c)\mapsto (f(a),g(c))$.
+The product function can be defined for arbitrarily many functions by extending the definition in the obvious way.
+
+Let $V$ be a finite set of real-valued variables.
+We use the notation $\sem{V}$ (same symbol but in boldface blue) to denote the set of every possible valuations of the variables in $V$, i.e.\ an element in $\sem{V}$ assigns an unique real number to every variable in $V$.
+It is easy to see that $\sem{V} = \mathbb{R}^{|V|}$.
+Let $U\subset V$ be a set.
+For any $v\in \sem{V}$, we use the notation $v[U]$ to denote the valuation in $\sem{U}$ that assigns the same values to the variables in $U$ as assigned by $v$; $v[U]$ is called the projection of $v$ on to $U$.
+ 
 \smallskip
 \noindent\textbf{Control System.}\
-%\textcolor{blue}{Although $\Sigma$ can represent any control system in general, we mainly consider multi-agent systems in this paper. }
-
-
 A \emph{control system} $\Sigma = (X, U, W, f)$
-consists of a state space $X= \mathbb{R}^n$, an input space $U\subseteq\mathbb{R}^m$, 
-a compact disturbance set $W\subset \mathbb{R}^n$, and 
-a function $f:X\times U\rightarrow X$ s.t. $f(\cdot,u)$ is locally Lipschitz for all $u\in U$. 
+consists of a finite set of real-valued \emph{state variables} $X$,
+% state space $X= \mathbb{R}^n$, 
+ an \emph{input space} $U\subseteq\mathbb{R}^m$, 
+a compact \emph{disturbance set} $W\subset \mathbb{R}^n$, and 
+a \emph{nominal dynamics} $f:\sem{X}\times U\rightarrow \sem{X}$ such that $f(\cdot,u)$ is locally Lipschitz for all $u\in U$. 
 %
-Given an initial state $x_0\in X$, a sampling time $\tau>0$, and a constant input $u\in U$, 
+We call each element of the set $\sem{X}$ a \emph{state}, and the set $\sem{X} = \mathbb{R}^{|X|}$ the \emph{state space} of $\Sigma$.
+Throughout, we will assume that there is a metric $d\colon \sem{X}\times \sem{X}\to \mathbb{R}$ on the set $\sem{X}$ such that $(\sem{X},d)$ is a metric space. 
+
+Given an initial state $x_0\in \sem{X}$, a sampling time $\tau>0$, and a constant input $u\in U$, 
 a \emph{trajectory} of $\Sigma$ 
-on $[0,\tau]$ is an absolutely continuous function $\xi:[0,\tau]\rightarrow X$  s.t. $\xi(0) = x_0$ and
+on $[0,\tau]$ is an absolutely continuous function $\xi:[0,\tau]\rightarrow \sem{X}$  such that $\xi(0) = x_0$ and
 $\xi(\cdot)$ fulfills the following differential inclusion for almost every $t\in[0,\tau]$:
 \begin{equation}\label{equ:def_f}
  \dot{\xi}\in f(\xi(t),u) + W. 
@@ -29,36 +48,36 @@ We collect all such solutions in the set $\Sol_\Sigma(x_0,u,\tau)$.
 
 \smallskip
 \noindent\textbf{Transition System.}\
-A \emph{transition system} $S=(X,U,\delta)$ consists of a state space $X$, an input space $U$, and a transition function $\delta:X\times U \rightarrow 2^X$. 
-A system $S$ is \emph{finite} if $X$ and $U$ are finite. 
-A trajectory $\rho\in X^\infty$ is a maximal sequence of states compatible with $\delta$:
-for all $1\leq k < |\rho|$ there exists $u\in U$ s.t.\ $\rho(k)\in \delta(\rho(k-1),u)$ and 
-if $|\rho| < \infty$ then $\delta(\rho(|\rho|),\delta)= \emptyset$ for all $u\in U$.
+A \emph{transition system} $S=(Y,U,\delta)$ consists of a state space $Y$, an input space $U$, and a transition function $\delta:Y\times U \rightarrow 2^Y$. 
+A system $S$ is \emph{finite} if $Y$ and $U$ are finite. 
+A trajectory $\rho\in Y^\infty$ is a maximal sequence of states compatible with $\delta$:
+for all $1\leq k < |\rho|$ there exists $u\in U$ such that $\rho(k)\in \delta(\rho(k-1),u)$ and 
+if $|\rho| < \infty$ then $\delta(\rho(|\rho|),u)= \emptyset$ for all $u\in U$.
 %For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
 
 \smallskip
 \noindent\textbf{Sampled-time Abstraction of Control System.}\
 Let $\Sigma = (X, U, W, f)$ be a control system and $\tau>0$ be the sampling time.
-A \emph{sampled-time abstraction} of $\Sigma$ is a transition system $(X,U,f_\tau)$, s.t.\ $x'$ is in $f_\tau(x,u)$ iff there is a trajectory $\xi\in \Sol_\Sigma(x,u,\tau)$ with $\xi(\tau)=x'$.
+A \emph{sampled-time abstraction} of $\Sigma$ is the transition system $(\sem{X},U,f_\tau)$, such that $x'$ is in $f_\tau(x,u)$ if and only if there is a trajectory $\xi\in \Sol_\Sigma(x,u,\tau)$ with $\xi(\tau)=x'$.
 
 \smallskip
 \noindent\textbf{Open-loop Controller and Controlled Trajectory.}\
-Let $\Sigma_\tau=(X,U,f_\tau)$ be the sampled-time abstraction of the control system $\Sigma=(X,U,W,f)$.
+Let $\Sigma_\tau=(\sem{X},U,f_\tau)$ be the sampled-time abstraction of the control system $\Sigma=(X,U,W,f)$.
 An \emph{open-loop controller} of $\Sigma_\tau$ is a function $C:[0;K]\rightarrow U$ for some given time horizon $K>0$.
-The \emph{open-loop} is obtained when we connect $C$ with $\Sigma_\tau$ serially, and is formalized using the transition system $C \triangleright \Sigma_\tau = (X\times [0;K],U,f_\tau^C)$ s.t.\ $(x',k+1)$ is in $f_\tau^C((x,k),u)$ iff $x'$ is in $f_\tau(x,u)$ and $C(k)=u$.
+The \emph{open-loop} is obtained when we connect $C$ with $\Sigma_\tau$ serially, and is formalized using the transition system $C \triangleright \Sigma_\tau = (\sem{X}\times [0;K],U,f_\tau^C)$ such that $(x',k+1)$ is in $f_\tau^C((x,k),u)$ if and only if $x'$ is in $f_\tau(x,u)$ and $C(k)=u$.
 
-Suppose $x_0$ be a given initial state of $\Sigma_\tau$.
-The \emph{open-loop behavior} $\Beh^\ol(x_0)$ of $C \triangleright\Sigma_\tau$ is the set of all infinite state sequences $(x_0,x_1,\ldots)$ s.t.\ for all $k\geq 0$, there exists an input $u$ with $(x_{k+1},k+1)\in f_\tau^C((x_k,k),u)$.
+Suppose $x_0\in \sem{X}$ be a given initial state of $\Sigma_\tau$.
+The \emph{open-loop behavior} $\Beh^\ol(x_0)$ of $C \triangleright\Sigma_\tau$ is the set of all infinite state sequences $(x_0,x_1,\ldots)$ such that for all $k\geq 0$, there exists an input $u$ with $(x_{k+1},k+1)\in f_\tau^C((x_k,k),u)$.
 
 \smallskip
 \noindent\textbf{Feedback Controller and Closed-loop.}
-Let $\Sigma_\tau=(X,U,f_\tau)$ be the sampled-time abstraction of the control system $\Sigma=(X,U,W,f)$.
-A \emph{feedback controller} of $\Sigma_\tau$ is a function $C:X\rightarrow U$.
-The \emph{closed-loop} is obtained when we connect $C$ with $\Sigma_\tau$ in feedback, and is formalized using the transition system $C\parallel\Sigma_\tau = (X,U,f_\tau^C)$ s.t.\ $x'$ is in $f_\tau^C(x,u)$ iff $x'$ is in $f_\tau(x,u)$ and $C(x)=u$.
-The feedback controller $C$ can be interpreted as a zero-order-hold controller for the control system $\Sigma$.
+Let $\Sigma_\tau=(\sem{X},U,f_\tau)$ be the sampled-time abstraction of the control system $\Sigma=(X,U,W,f)$.
+A \emph{feedback controller} of $\Sigma_\tau$ is a function $C:\sem{X}\rightarrow U$.
+The \emph{closed-loop} is obtained when we connect $C$ with $\Sigma_\tau$ in feedback, and is formalized using the transition system $C\parallel\Sigma_\tau = (\sem{X},U,f_\tau^C)$ such that $x'$ is in $f_\tau^C(x,u)$ if and only if $x'$ is in $f_\tau(x,u)$ and $C(x)=u$.
+The feedback controller $C$ when connected to the sampled-time control system of $\Sigma_\tau$ can be interpreted as a zero-order-hold controller for the control system $\Sigma$.
 
-Suppose $x_0$ be a given initial state of $\Sigma_\tau$.
-The \emph{closed-loop behavior} $\Beh^\cl(x_0)$ of $C\parallel\Sigma_\tau$ is the set of all infinite state sequences $(x_0,x_1,\ldots)$ s.t.\ for all $k\geq 0$, there exists an input $u$ with $x_{k+1}\in f_\tau^C(x_k,u)$.
+Suppose $x_0\in \sem{X}$ be a given initial state of $\Sigma_\tau$.
+The \emph{closed-loop behavior} $\Beh^\cl(x_0)$ of $C\parallel\Sigma_\tau$ is the set of all infinite state sequences $(x_0,x_1,\ldots)$ such that for all $k\geq 0$, there exists an input $u$ with $x_{k+1}\in f_\tau^C(x_k,u)$.
 
 
 %\smallskip
